--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ openai = "^0.28"
 rich = "^13.0"
 prompt-toolkit = "^3.0"
 textual = "^0.40"
+typer = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 black= "^23.9.1"
